# federated-learning-mnist-experiment

./: .gitignore  README.md  experiments.csv  per_round_centralized.csv  per_round_distributed.csv  pretrained_cifar_bw8.pth  pretrained_mnist_bw8.pth  pyproject.toml
fed_learning_cifar_experiment/: __init__.py  client_app.py  pre_train_model.py  server_app.py  task.py
fed_learning_cifar_experiment/models/: resnet_cnn_model.py
fed_learning_cifar_experiment/state/: fedavg_cluster_defense.py  krum_metrics_strategy.py  multi_krum_metrics_strategy.py  server_strategy.py
fed_learning_cifar_experiment/utils/: backdoor_attack.py  drichlet_partition.py  evaluate_attack.py  logger.py  run_simulation.py
fed_learning_mnist_experiment/: client_app.py  pre_train_model.py  prepare_data.py  pretrained_cifar_bw8_less_acc.pth  results.txt  server_app.py  task.py
fed_learning_mnist_experiment/models/: resnet_cnn_model.py
fed_learning_mnist_experiment/plots/: plotter.py
fed_learning_mnist_experiment/state/: fedavg_cluster_defense.py  krum_metrics_strategy.py  multi_krum_metrics_strategy.py  server_strategy.py
fed_learning_mnist_experiment/utils/: backdoor_attack.py  evaluate_attack.py  local_attack.py  logger.py  run_simulation.py
pretrained_models/: pretrained_cifar.pth
